tests/specs/ecosystem/std/testing/0_207_0.test
std/testing/0.207.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.207.0": "jsr:@std/assert@0.207.0",
      "jsr:@std/async@^0.207.0": "jsr:@std/async@0.207.0",
      "jsr:@std/fmt@^0.207.0": "jsr:@std/fmt@0.207.0"
    },
    "jsr": {
      "@std/assert@0.207.0": {
        "integrity": "a279352be3dc1eb7ce0a64d8e3509b010a95004d25dee9e53fbacbcbddee0543",
        "dependencies": [
          "jsr:@std/fmt@^0.207.0"
        ]
      },
      "@std/async@0.207.0": {
        "integrity": "3a8a782209479a17ff9acc55180ac75c63cb7d5c527cf9de5bec50dda091cbe5"
      },
      "@std/fmt@0.207.0": {
        "integrity": "0181bf6e26572b24f8cd453b8ae4154c09c89359ad0aacc9bd62a8450471590a"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:497:11
    | 
497 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
498 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
499 |   return it({
    | ^^^^^^^^^^^^^
500 |     ...options,
    | ^^^^^^^^^^^^^^^
501 |     only: true,
    | ^^^^^^^^^^^^^^^
502 |   });
    | ^^^^^
503 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:505:13
    | 
505 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
506 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
507 |   return it({
    | ^^^^^^^^^^^^^
508 |     ...options,
    | ^^^^^^^^^^^^^^^
509 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
510 |   });
    | ^^^^^
511 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


